<resources>
    <string name="app_name">Renewash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">AIzaSyAe89wSeaCjapEyZ6iLO_XD90tkijfD0NU</string>
    <string name="welcome_to_renewash">Welcome To Renewash</string>
    <string name="that_new_feel_again">That New Feel Again</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_appointment_type">Select Appointment Type</string>
    <string name="one_time_wash">ONE TIME WASH</string>
    <string name="monthly_or_weekly_subscription">MONTHLY OR WEEKLY SUBSCRIPTION</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="van">VAN</string>
    <string name="pickup_truck">PICKUP TRUCK</string>
    <string name="minivan">MINIVAN</string>
    <string name="sport_utility_vehicle_suv">SPORT UTILITY VEHICLE(SUV)</string>
    <string name="convertible">CONVERTIBLE</string>
    <string name="sports_car">SPORTS CAR</string>
    <string name="sedan">SEDAN</string>
    <string name="choose_your_vehicle_type">Choose Your Vehicle Type</string>
    <string name="select_date">Select Date</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="next">next</string>
    <string name="car_wash_date_time">Car wash date time</string>
    <string name="select_make">Select Make</string>
    <string name="select_model">Select Model</string>
    <string name="enter_plate_number">Enter Plate Number</string>
    <string name="previous">Previous</string>
    <string name="click_here_to_summary">Click here for Summary</string>
    <string name="exterior_only">Exterior Only</string>
    <string name="interior_only">Interior Only</string>
    <string name="dashboard_mats_and_seats">Dashboard, Mats and Seats</string>
    <string name="pick_addons">Pick Addons</string>
    <string name="choose_package">Choose Package</string>
    <string name="tyres_mirrors">Tyres, Mirrors</string>
    <string name="purchase_gift_card">Purchase Gift Card</string>
    <string name="fill_your_information">Fill your information</string>
    <string name="email">Email Address *</string>
    <string name="company_name">Company Name</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="appointment_message">We will confirm you appointment with you by phone or e-mail within 24 hours of receiving your request.</string>
    <string name="i_agree_terms_and_conditions">I agree Terms and Conditions</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="submit">submit</string>
    <string name="please_enter_amount">Enter Amount</string>
    <string name="gift_card">Gift Card</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="total">Total</string>
    <string name="gift_card_number">Gift Card Number</string>
    <string name="expiry_month">MM</string>
    <string name="cvv">CVV</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="your_name">Your Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="recipients_name">Recipients Name</string>
    <string name="recipients_email">Recipients Email</string>
    <string name="special_message_to_recipient">Special Message to Recipient</string>
    <string name="expiry_year">YY</string>
    <string name="packages">Package</string>
    <string name="addons">Addons</string>
    <string name="payment_options">Payment Options</string>
    <string name="enter_gift_card">Enter Gift Card</string>
    <string name="credit_card_information">Credit Card Information</string>
    <string name="expiry_months">Expiry Month</string>
    <string name="expiry_years">Expiry Year</string>
    <string name="cvv_code">CVV Code</string>
    <string name="first_names">First Name</string>
    <string name="last_names">Last Name</string>
    <string name="emails">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="message">Message</string>
    <string name="message_title">Message *</string>
    <string name="address_title">Address *</string>
    <string name="phone_number_title">Phone Number*</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_title">Password *</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an account? Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="city_title">City *</string>
    <string name="state_title">State *</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="zip_code_title">Zip Code *</string>
    <string name="login_now"><u>Login Now</u></string>
    <string name="log_out"><u>Log Out</u></string>
    <string name="have_an_account_sign_in">Have an account? Sign in</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_a_link_to_this_email_to_change_your_password">We will send you a link to this email to change your password.</string>
    <string name="additional_info">Additional Info</string>
    <string name="logout">Do you want to logout?</string>
    <string name="logout_btn">Logout</string>
    <string name="cancel">cancel</string>
    <string name="yes">Yes</string>
    <string name="stars">**** ***** ****</string>
</resources>