<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FillInformationFragment">

    <RelativeLayout
        android:id="@+id/headerRl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/back_arrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/fill_your_information"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerRl">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/first_name"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:elevation="3dp"
                        app:cardBackgroundColor="@color/unselected"
                        app:cardCornerRadius="3dp">

                        <EditText
                            android:id="@+id/firstName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@color/unselected"
                            android:hint="@string/first_names"
                            android:inputType="textPersonName"
                            android:longClickable="false"
                            android:paddingStart="5dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/last_name"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:elevation="3dp"
                        app:cardBackgroundColor="@color/unselected"
                        app:cardCornerRadius="3dp">

                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@color/unselected"
                            android:hint="@string/last_names"
                            android:inputType="textPersonName"
                            android:longClickable="false"
                            android:paddingStart="5dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@color/unselected"
                app:cardCornerRadius="3dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="@color/unselected"
                    android:hint="@string/emails"
                    android:inputType="textEmailAddress"
                    android:longClickable="false"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/phone_number_title"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@color/unselected"
                app:cardCornerRadius="3dp">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="@color/unselected"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:longClickable="false"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/address_title"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@color/unselected"
                app:cardCornerRadius="3dp">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="@color/unselected"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress"
                    android:longClickable="false"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/message_title"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@color/unselected"
                app:cardCornerRadius="3dp">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="@color/unselected"
                    android:gravity="top"
                    android:hint="@string/message"
                    android:longClickable="false"
                    android:overScrollMode="always"
                    android:padding="5dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="13sp"
                    tools:ignore="Autofill,TextFields" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/appointment_message"
                android:textColor="@color/dark_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/termsAndCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/i_agree_terms_and_conditions"
                android:textColor="@color/dark_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/previousButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/appointment_type_back"
                    android:text="@string/previous"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/nextButton"
                    style="@style/Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/appointment_type_back"
                    android:text="@string/next"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/summaryBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/click_here_to_summary"
                    android:textColor="@color/blue" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/double_arrow"
                    app:tint="@color/blue"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>