<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/light_blue_back"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/logout"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llBottomView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    style="@style/logout_button"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/logout_btn"
                    android:fontFamily="@font/poppins_medium"
                    android:id="@+id/tvLogout"
                    android:textColor="@color/white"
                    tools:ignore="RtlCompat" />

                <TextView
                    style="@style/logout_button"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="40dp"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:id="@+id/tvCancel"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    tools:targetApi="lollipop"
                    tools:ignore="RtlCompat"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>